# Fambot

./: .env.example  .gitignore  AGENTS.md  README.md  diabetes_model.pkl  model.py  pyproject.toml  render.yaml
fambot_backend/: app.py  cardio_features.py  deps.py  firestore_users.py  identity_toolkit.py  schemas.py
fambot_backend/api/: __init__.py
fambot_backend/api/routers/: auth.py  invitations.py  users.py
fambot_backend/core/: __init__.py  deps.py  firebase_init.py  jwt_tokens.py
fambot_backend/services/: __init__.py  family_invites.py  family_roles.py  firestore_users.py  inference.py
scripts/: render_start.sh
